# scholar-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  project.toml  pyproject.toml  readme.md  requirements.txt
app/: config.py  container.py  main.py
app/adapters/: embedder_adapter.py  qdrant_adapter.py  test_in_memory_adapter.py
app/adapters/in_memory/: fake_embedder.py
app/api/: deps.py  exception.py  schema.py  schemas.py
app/api/routes/: document.py  query_route.py  rag.py
app/api/schemas/: errors.py
app/domain/: exception.py  models.py
app/domain/ports/: embedder.py  embedder_port.py  llm.py  vector_store_port.py
app/modules/ingestion/: chunking.py  loaders.py  service.py
app/modules/rag/: prompt_builder.py  service.py
app/modules/retrieval/: service.py
app/tests/: test_vector_store_contract.py
app/tests/unit/: fake_vectorStore.py  fake_vector_store.py  test_ingestion.py
app/utils/: math.py
