[build-system]
requires = ["setuptools>=61.0"]
build-backend="setuptools.build-meta"

[project]
name = "Scholar-rag-system"
version = "0.1.0"
description = "Retrieval-Augmented Generation Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "asyncpg==0.30.0",
    "redis==5.2.1",
    "qdrant-client==1.12.1",
    "sentence-transformers==3.3.1",
    "openai==1.59.9",
    "tiktoken>=0.7.0",
]

[tool.ruff]
line-length=100
target-version="py311"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[tool.mypy]
python_version ="3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

plugins = [
    "pydantic.mypy"
]

exclude = [
    "venv",
    ".venv",
    "__pycache__"
]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "asyncpg.*",
    "asyncpg"
]
ignore_missing_imports=true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
